--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <h3>Mexican Rice</h3>
                     <figure>
                         <img src="photos/mexican-rice.png">
+                        <figcaption>Traditional recipe with a twist.</figcaption>
                     </figure>
-                    Traditional recipe with a twist.
                     Rating: 4 of 5 Stars 
                 </div>   
                 
@@ -114,8 +114,8 @@
                     <h3>Salsa</h3>
                     <figure>
                         <img src="photos/salsa.png">
+                        <figcaption>Just the right amount of spice.</figcaption>
                     </figure>
-                    Just the right amount of spice.
                     Rating: 5 of 5 Stars 
                 </div>    
 
@@ -123,8 +123,8 @@
                     <h3>Guacamole</h3>
                     <figure>
                         <img src="photos/guacamole.png">
+                        <figcaption>Fresh and healthy.</figcaption>
                     </figure>
-                    Fresh and healthy.
                     Rating: 4 of 5 Stars 
                 </div>
 
@@ -132,8 +132,8 @@
                     <h3>Tortillas</h3>
                     <figure>
                         <img src="photos/tortillas.png">
-                    </figure>
-                    Easy to make and so good. 
+                        <figcaption>Easy to make and so good.</figcaption>
+                    </figure> 
                     Rating: 4 of 5 Stars 
                 </div>
             </section>
